--- a/A1_StylesCSS.css
+++ b/A1_StylesCSS.css
@@ -68,8 +68,8 @@
 		border: 5px black solid;
 		position: relative;
 		/*bottom: 5px;*/
-		float: left;
-		overflow: auto;
+		/*float: left;*/
+		/*overflow: auto;*/
 		/*left: 30px;*/
 		margin-left: 10%;
 		margin-top: 20px;
