--- a/A1_StylesCSS.css
+++ b/A1_StylesCSS.css
@@ -73,7 +73,8 @@
 		/*margin-left: 10%;*/
 		/*margin-top: 20px;*/
 		top: 20px;
-		right: 30px;
+		left: 10px;
+		right: 10px;
 		width: 30%;
 		padding-left: 5px;
 		padding-right: 5px;
