--- a/A1_StylesCSS.css
+++ b/A1_StylesCSS.css
@@ -74,7 +74,7 @@
 		/*margin-top: 20px;*/
 		top: 20px;
 		left: 50px;
-		right: 10px;
+		/*right: 10px;*/
 		width: 30%;
 		padding-left: 5px;
 		padding-right: 5px;
@@ -89,17 +89,6 @@
 		/*margin-top: 20%;*/
 		padding: 10px;
 		
-	}
-
-	#Resume {
-		border: 5px black solid;
-		position: relative;
-		float: right;
-		overflow: auto;
-		margin-top: 20px;
-		margin-right: 10%;
-		padding-left: 5px;
-		padding-right: 5px;
 	}
 
 	#footer {
