--- a/A1_StylesCSS.css
+++ b/A1_StylesCSS.css
@@ -68,7 +68,7 @@
 		border: 5px black solid;
 		position: relative;
 		top: 20px;
-		left: 50px;
+		/*left: 50px;*/
 		width: 30%;
 		padding-left: 5px;
 		padding-right: 5px;
@@ -78,10 +78,10 @@
 
 	#menu {
 		border: 5px black solid;
-		top: 20px;
+		top: 15px;
 		margin: 10%;
-		padding: 10px;
-		
+		padding-left: 10px;
+		padding-right: 10px;
 	}
 
 	#footer {
@@ -92,7 +92,6 @@
 		margin: 20px;
 		margin-top: 70px;
 		text-align: center;
-		/*float: bottom;*/
 		overflow: auto;		
 	}
 
