--- a/A1_StylesCSS.css
+++ b/A1_StylesCSS.css
@@ -68,7 +68,7 @@
 		border: 5px black solid;
 		position: relative;
 		top: 20px;
-		/*left: 50px;*/
+		right: 30px;
 		width: 30%;
 		padding-left: 5px;
 		padding-right: 5px;
