--- a/A1_StylesCSS.css
+++ b/A1_StylesCSS.css
@@ -78,7 +78,7 @@
 
 	#menu {
 		border: 5px black solid;
-		top: 30px;
+		/*top: 30px;*/
 		margin-left: 10%;
 		margin-right: 10%;
 		padding-left: 10px;
